DOP_clusterization_2019/poll.deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: poll
  namespace: default
  labels:
    app: my_app
    my_app: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my_app
      task: poll
  template:
    metadata:
      labels:
        app: my_app
        task: poll
    spec:
      containers:
      - name: my_app
        image: epitechcontent/t-dop-600-poll:k8s
        resources:
          limits:
            memory: 128Mi
        ports:
        - containerPort: 80
      restartPolicy: Always
