DOP_clusterization_2019/postgres.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresDb
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: postgresDb
  template:
    metadata:
      labels:
        app: postgresDb
    spec:
      containers:
      - name: postgresDb
        image: postgres:12
        ports:
          - containerPort: 5432
        volumeMounts:
        - name: persistent-storage
          mountPath: /var/lib/postgresql/data
      restartPolicy: Always
      volumes:
      - name: persistent-storage
        persistentVolumeClaim:
    claimName: volumeclaim
