DOP_clusterization_2019/redis.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
  namespace: default
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      role: master
      tier: backend
  replicas: 0
  template:
    metadata:
      labels:
        app: redis
        role: master
        tier: backend
    spec:
      containers:
      - name: master
        image: redis:5.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 6379
      restartPolicy: Always
