DOP_clusterization_2019/result.deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: result
  namespace: default
  labels:
    app: my_app
    my_app: result
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my_app
      task: result
  template:
    metadata:
      labels:
        app: my_app
        task: result
      containers:
      - name: my_app
        image: epitechcontent/t-dop-600-result:k8s
        resources:
          limits:
            memory: 128Mi
        ports:
          - containerPort: 80
      restartPolicy: Always
