DOP_clusterization_2019/traefik.deployment.yaml
---
kind: DaemonSet
apiVersion: extensions/v1beta1
metadata:
  name: traefik-ingress-controller
  namespace: kube-public
  labels:
    app: my_app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: my_app
        name: my_app
    spec:
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      containers:
      - image: traefik:v1.7
        name: my_app
        ports:
        - name: http
        containerPort: 30021
      - name: admin
        containerPort: 30042
      securityContext:
          capabilities:
            drop:
            - ALL
            add:
            - NET_BIND_SERVICE
        args:
        - --api
        - --kubernetes
        - --logLevel=INFO
      restartPolicy: Always
