DOP_clusterization_2019/worker.deployment.yaml
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: worker
  namespace: default
  labels:
    app: my_app
    my_app: worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app: my_app
      task: worker
  template:
    metadata:
      labels:
        app: my_app
        task: worker
    spec:
      containers:
      - name: my_app
        image: epitechcontent/t-dop-600-worker:k8s
        resources:
          limits:
            memory: 256Mi
      restartPolicy: Always
