DOP_clusterization_2019/poll.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: poll
  namespace: default
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: my_app
    task: poll
  type: ContainerPort
