DOP_clusterization_2019/postgres.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes
spec:
  selector:
    app: kubernetes
  type: ContainerPort
  ports:
  - port: 5432
    targetPort: 5432
