DOP_clusterization_2019/result.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: default
spec:
  ports:
  - name: http
    targetPort: 80
    port: 80
  selector:
    app: my_app
    task: result
  type: ContainerPort
