DOP_clusterization_2019/traefik.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: kube-public
spec:
  selector:
    app: my_app
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
      nodePort: 80
      name: http
    - port: 8080
      protocol: TCP
      targetPort: 8080
      nodePort: 8080
      name: admin
  type: LoadBalancer

# http:
# services:
#   my-service:
#     loadBalancer:
#       servers:
#       - url: "http://private-ip-server-1/"
#       - url: "http://private-ip-server-2/"
 
# http:
# services:
#   app:
#     weighted:
#       services:
#       - name: poll
# weight: 3
# - name: result
# weight: 1

#   poll:
#     loadBalancer:
#       servers:
#       - url: "http://private-ip-server-1/"

#   result:
#     loadBalancer:
#       servers:
#       - url: "http://private-ip-server-3/"
