DOP_clusterization_2019/poll.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: poll
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: poll.dop.io
    http:
      paths:
      - path: /
        backend:
          serviceName: poll
          servicePort: http
